<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/textCarEditorVehicleID" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/VehicleID">
        <requestFocus />
    </EditText>
    <EditText android:id="@id/textCarEditorServerNameOrIP" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/ServerNameOrIP" />
    <EditText android:id="@id/textCarEditorNetPass" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/RegPass" android:inputType="textPassword" />
    <EditText android:id="@id/textCarEditorRegPass" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/NetPass" android:inputType="textPassword" />
    <Spinner android:id="@id/spinnerCarEditorColor" android:layout_width="fill_parent" android:layout_height="80.0dip" />
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btnCarEditorCancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Cancel" />
        <Button android:id="@id/btnCarEditorDelete" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Delete" />
        <Button android:id="@id/btnCarEditorSave" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Save" android:layout_weight="0.22" />
    </LinearLayout>
</LinearLayout>
